# PointXY

./: CMakeLists.txt  README.md
.github/workflow/: my-workflow.yml
include/: point.hpp
libs/: README.md
src/: pointTest.cpp
